--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -47,14 +47,19 @@
             <td>{{ schoolClass.homeroomTeacherName }}</td>
             <td>{{ schoolClass.majorName }}</td>
             <td>
-              <button pButton class="p-button">Sửa</button>
-              <button pButton class="p-button">Xóa</button>
               <button
                 pButton
                 class="p-button"
                 (click)="showDialogToAdd(schoolClass)"
               >
-                Chi Tiết 
+                Chi Tiết
+              </button>
+              <button
+                pButton
+                class="p-button"
+                (click)="showDialog2(schoolClass.id)"
+              >
+                Phân công
               </button>
             </td>
           </tr>
@@ -62,158 +67,206 @@
       </p-table>
 
       <p-dialog
-  [(visible)]="displayDialog"
-  [style]="{ width: '800px' }"
-  class="d-flex"
-  header="Quản lý sinh viên trong lớp"
-  [modal]="true"
-  styleClass="p-fluid"
->
-  <div class="container d-flex" style="width: 800px; justify-items: auto;">
-    <span>Tên Lớp: <strong>{{SchoolClassItem.code}}</strong></span>
-    <div class="p-field">
-      <label for="student">Max Student</label>
-      <input
-        id="student"
-        pInputText
-        type="number"
-        [(ngModel)]="SchoolClassItem.maxStudents"
-        required
-      />
-    </div>
-    <div class="p-field p-col-6" style="flex: 1">
-      <label for="teacher">Chọn giáo viên chủ nghiệm</label>
-      <p-dropdown
-        id="teacher"
-        [options]="Teachers"
-        [(ngModel)]="selectedTeacher"
-        placeholder="Chọn giáo viên chủ nghiệm"
-        optionLabel="fullName"
-        optionValue="id"
-        [style]="{ width: '100%' }"
+        [(visible)]="displayDialog"
+        [style]="{ width: '800px' }"
+        class="d-flex"
+        header="Quản lý sinh viên trong lớp"
+        [modal]="true"
+        styleClass="p-fluid"
+      >
+        <div class="container d-flex" style="width: 800px; justify-items: auto">
+          <span
+            >Tên Lớp: <strong>{{ SchoolClassItem.code }}</strong></span
+          >
+          <div class="p-field">
+            <label for="student">Max Student</label>
+            <input
+              id="student"
+              pInputText
+              type="number"
+              [(ngModel)]="SchoolClassItem.maxStudents"
+              required
+            />
+          </div>
+          <div class="p-field p-col-6" style="flex: 1">
+            <label for="teacher">Chọn giáo viên chủ nghiệm</label>
+            <p-dropdown
+              id="teacher"
+              [options]="Teachers"
+              [(ngModel)]="selectedTeacher"
+              placeholder="Chọn giáo viên chủ nghiệm"
+              optionLabel="fullName"
+              optionValue="id"
+              [style]="{ width: '100%' }"
+            ></p-dropdown>
+          </div>
+        </div>
+        <ng-template pTemplate="content">
+          <div class="p-grid d-flex">
+            <div class="p-col-6">
+              <h3>Danh sách tất cả sinh viên</h3>
+              <div class="p-inputgroup">
+                <input
+                  pInputText
+                  type="text"
+                  placeholder="Tìm kiếm sinh viên"
+                  [(ngModel)]="searchAllStudents"
+                />
+                <button
+                  pButton
+                  icon="pi pi-search"
+                  class="p-button-outlined"
+                  (click)="searchAllStudentsFn()"
+                ></button>
+              </div>
+              <p-table
+                [value]="ListStudent"
+                [paginator]="true"
+                [rows]="5"
+                selectionMode="single"
+                [(selection)]="selectedStudent"
+              >
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>Mã SV</th>
+                    <th>Họ tên</th>
+                    <th>Hành động</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-student>
+                  <tr>
+                    <td>{{ student.id }}</td>
+                    <td>{{ student.fullName }}</td>
+                    <td>
+                      <button
+                        pButton
+                        label="Thêm"
+                        icon="pi pi-plus"
+                        class="p-button-success"
+                        (click)="addStudentToClass(student.id)"
+                      ></button>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </div>
+            <div class="p-col-6">
+              <h3>Sinh viên trong lớp</h3>
+              <div class="p-inputgroup">
+                <input
+                  pInputText
+                  type="text"
+                  placeholder="Tìm kiếm sinh viên"
+                  [(ngModel)]="searchClassStudents"
+                />
+                <button
+                  pButton
+                  icon="pi pi-search"
+                  class="p-button-outlined"
+                  (click)="searchClassStudentsFn()"
+                ></button>
+              </div>
+              <p-table
+                [value]="Student_Class"
+                [paginator]="true"
+                [rows]="5"
+                selectionMode="single"
+                [(selection)]="selectedClassStudent"
+              >
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>Mã SV</th>
+                    <th>Họ tên</th>
+                    <th>Hành động</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-student>
+                  <tr>
+                    <td>{{ student.id }}</td>
+                    <td>{{ student.fullName }}</td>
+                    <td>
+                      <button
+                        pButton
+                        label="Xóa"
+                        icon="pi pi-times"
+                        class="p-button-danger"
+                        (click)="removeStudentFromClass(student.id)"
+                      ></button>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </div>
+          </div>
+        </ng-template>
 
-      ></p-dropdown>
-    </div>
-  </div>
-  <ng-template pTemplate="content">
-    <div class="p-grid d-flex">
-      <div class="p-col-6">
-        <h3>Danh sách tất cả sinh viên</h3>
-        <div class="p-inputgroup">
-          <input
-            pInputText
-            type="text"
-            placeholder="Tìm kiếm sinh viên"
-            [(ngModel)]="searchAllStudents"
-          />
+        <ng-template pTemplate="footer">
           <button
             pButton
-            icon="pi pi-search"
-            class="p-button-outlined"
-            (click)="searchAllStudentsFn()"
+            pRipple
+            label="Lưu"
+            icon="pi pi-save"
+            class="p-button-success"
+            (click)="saveClassInfo()"
           ></button>
-        </div>
+          <button
+            pButton
+            pRipple
+            label="Đóng"
+            icon="pi pi-times"
+            class="p-button-text"
+            (click)="displayDialog = false"
+          ></button>
+        </ng-template>
+      </p-dialog>
+
+      <p-dialog
+        [(visible)]="displayDialog2"
+        [style]="{ width: '800px' }"
+        class="d-flex"
+        header="Phân công"
+        [modal]="true"
+        styleClass="p-fluid"
+      >
         <p-table
-          [value]="ListStudent"
+          [value]="subjects"
           [paginator]="true"
-          [rows]="5"
-          selectionMode="single"
-          [(selection)]="selectedStudent"
+          [rows]="10"
+          [responsive]="true"
         >
           <ng-template pTemplate="header">
             <tr>
-              <th>Mã SV</th>
-              <th>Họ tên</th>
-              <th>Hành động</th>
+              <th>Mã học phần</th>
+              <th>Tên học phần</th>
+              <th>Giảng viên</th>
             </tr>
           </ng-template>
-          <ng-template pTemplate="body" let-student>
+          <ng-template pTemplate="body" let-subject let-i="rowIndex">
             <tr>
-              <td>{{ student.id }}</td>
-              <td>{{ student.fullName }}</td>
+              <td>{{ subject.code }}</td>
+              <td>{{ subject.name }}</td>
               <td>
-                <button
-                  pButton
-                  label="Thêm"
-                  icon="pi pi-plus"
-                  class="p-button-success"
-                  (click)="addStudentToClass(student.id)"
-                ></button>
+                <div class="p-field">
+                  <p-dropdown
+                    id="Department"
+                    [options]="subject.teaches"
+                    [(ngModel)]="model.teaches[i]"
+                    placeholder="Chọn khoa"
+                    optionLabel="name"
+                    optionValue="id"
+                    [style]="{
+                      width: '100%',
+                      'max-width': '500px',
+                      'margin-bottom': '10px'
+                    }"
+                    (onChange)="selectTeacher(i)"
+                  ></p-dropdown>
+                </div>
               </td>
             </tr>
           </ng-template>
         </p-table>
-      </div>
-      <div class="p-col-6">
-        <h3>Sinh viên trong lớp</h3>
-        <div class="p-inputgroup">
-          <input
-            pInputText
-            type="text"
-            placeholder="Tìm kiếm sinh viên"
-            [(ngModel)]="searchClassStudents"
-          />
-          <button
-            pButton
-            icon="pi pi-search"
-            class="p-button-outlined"
-            (click)="searchClassStudentsFn()"
-          ></button>
-        </div>
-        <p-table
-          [value]="Student_Class"
-          [paginator]="true"
-          [rows]="5"
-          selectionMode="single"
-          [(selection)]="selectedClassStudent"
-        >
-          <ng-template pTemplate="header">
-            <tr>
-              <th>Mã SV</th>
-              <th>Họ tên</th>
-              <th>Hành động</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-student>
-            <tr>
-              <td>{{ student.id }}</td>
-              <td>{{ student.fullName }}</td>
-              <td>
-                <button
-                  pButton
-                  label="Xóa"
-                  icon="pi pi-times"
-                  class="p-button-danger"
-                  (click)="removeStudentFromClass(student.id)"
-                ></button>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
-      </div>
-    </div>
-  </ng-template>
-
-  <ng-template pTemplate="footer">
-    <button
-      pButton
-      pRipple
-      label="Lưu"
-      icon="pi pi-save"
-      class="p-button-success"
-      (click)="saveClassInfo()"
-    ></button>
-    <button
-      pButton
-      pRipple
-      label="Đóng"
-      icon="pi pi-times"
-      class="p-button-text"
-      (click)="displayDialog = false"
-    ></button>
-  </ng-template>
-</p-dialog>
-
+      </p-dialog>
     </div>
   </div>
 </div>
