--- a/src/app/components/subject/subject.component.html
+++ b/src/app/components/subject/subject.component.html
@@ -1,77 +1,138 @@
 <div style="display: flex">
-    <app-navbar style="flex: 1"></app-navbar>
-    <div style="flex: 5">
-        <app-header></app-header>
-        <div class="card">
-        
-            <h1 class="titel">Quản lý môn học</h1>
-            
-            <p-toast></p-toast>
-            <p-confirmDialog></p-confirmDialog>
-            <div class="container d-flex justify-content-between " style="width: 100%;">
-                <input pInputText type="text" placeholder="Nhập tên môn học" style="margin-right: 50px;" />
-                <button pButton type="button" label="Thêm môn học" icon="pi pi-plus" class="p-mt-3" (click)="showDialogToAdd()"></button>
-            </div>
-          
-            <p-table [value]="subjects" [paginator]="true" [rows]="10" [responsive]="true">
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>Mã môn học</th>
-                  <th>Tên môn học</th>
-                  <th>Tên chuyên ngành</th>
-                  <th>Thao tác</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-subject>
-                <tr>
-                  <td>{{subject.id}}</td>
-                  <td>{{subject.name}}</td>
-                  <td>{{subject.code}}</td>
-                  <td >
-                    <button pButton  class="p-button  p-mr-2" (click)="edit(subject)">Sửa</button>
-                    <button pButton  class="p-button " (click)="delete(subject)">Xóa</button>
-                    <button pButton  class="p-button " (click)="delete(subject)">Thêm giảng viên</button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-           
-            <p-dialog [(visible)]="displayDialog" [style]="{width: '450px'}" header="Thông tin môn học" [modal]="true" styleClass="p-fluid">
-              <ng-template pTemplate="content">
-                <div class="p-field">
-                  <label for="SubjectId">Mã Môn học</label>
-                  <input id="SubjectId" pInputText type="text" [(ngModel)]="subject.id" required autofocus />
-                </div>
-                <div class="p-field">
-                  <label for="SubjectName">Tên môn học</label>
-                  <input id="SubjectName" pInputText type="text" [(ngModel)]="subject.name" required />
-                </div>
-                <div class="p-field">
-                  <label for="Credits">Số tín chỉ</label>
-                  <input id="Credits" pInputText type="number" [(ngModel)]="subject.code" required />
-                </div>
-                <div class="p-field">
-                  <label for="Semester">Học kỳ</label>
-                  <input id="Semester" pInputText type="text" [(ngModel)]="subject.code" required />
-                </div>
-                <div class="p-field">
-                    <label for="MajorId">Chuyên ngành</label>
-                    <select id="MajorId" [(ngModel)]="subject.code">
-                        <option>Chọn chuyên ngành</option>
-                        <option value="CNPM">Công nghệ phần mền</option>
-                        <option value="KTPM">Kiểm thử phần mền</option>
-                    </select>
-                  </div>
-                <div class="p-field">
-                    <label for="Description">Mô tả</label>
-                    <input id="Description" pInputText type="text" [(ngModel)]="subject.code" required />
-                  </div>
-              </ng-template>
-              <ng-template pTemplate="footer">
-                <button pButton pRipple label="Hủy" icon="pi pi-times" class="p-button-text" (click)="displayDialog=false"></button>
-                <button pButton pRipple label="Lưu" icon="pi pi-check" class="p-button-text" (click)="save()"></button>
-              </ng-template>
-            </p-dialog>
+  <app-navbar style="flex: 1"></app-navbar>
+  <div style="flex: 5">
+    <app-header></app-header>
+    <div class="card">
+      <h1 class="titel">Quản lý môn học</h1>
+
+      <p-toast></p-toast>
+      <p-confirmDialog></p-confirmDialog>
+      <div class="container d-flex justify-content-between" style="width: 100%">
+        <input
+          pInputText
+          type="text"
+          placeholder="Nhập tên môn học"
+          style="margin-right: 50px"
+        />
+        <button
+          pButton
+          type="button"
+          label="Thêm môn học"
+          icon="pi pi-plus"
+          class="p-mt-3"
+          (click)="showDialogToAdd()"
+        ></button>
+      </div>
+
+      <p-table
+        [value]="subjects"
+        [paginator]="true"
+        [rows]="10"
+        [responsive]="true"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Mã môn học</th>
+            <th>Tên môn học</th>
+            <th>Tên chuyên ngành</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-subject>
+          <tr>
+            <td>{{ subject.id }}</td>
+            <td>{{ subject.name }}</td>
+            <td>{{ subject.code }}</td>
+          </tr>
+        </ng-template>
+      </p-table>
+
+      <p-dialog
+        [(visible)]="displayDialog"
+        [style]="{ width: '450px' }"
+        header="Thông tin môn học"
+        [modal]="true"
+        styleClass="p-fluid"
+      >
+        <ng-template pTemplate="content">
+          <div class="p-field">
+            <label for="SubjectId">Mã Môn học</label>
+            <input
+              id="SubjectId"
+              pInputText
+              type="text"
+              [(ngModel)]="subject.id"
+              required
+              autofocus
+            />
           </div>
+          <div class="p-field">
+            <label for="SubjectName">Tên môn học</label>
+            <input
+              id="SubjectName"
+              pInputText
+              type="text"
+              [(ngModel)]="subject.name"
+              required
+            />
+          </div>
+          <div class="p-field">
+            <label for="Credits">Số tín chỉ</label>
+            <input
+              id="Credits"
+              pInputText
+              type="number"
+              [(ngModel)]="subject.code"
+              required
+            />
+          </div>
+          <div class="p-field">
+            <label for="Semester">Học kỳ</label>
+            <input
+              id="Semester"
+              pInputText
+              type="text"
+              [(ngModel)]="subject.code"
+              required
+            />
+          </div>
+          <div class="p-field">
+            <label for="MajorId">Chuyên ngành</label>
+            <select id="MajorId" [(ngModel)]="subject.code">
+              <option>Chọn chuyên ngành</option>
+              <option value="CNPM">Công nghệ phần mền</option>
+              <option value="KTPM">Kiểm thử phần mền</option>
+            </select>
+          </div>
+          <div class="p-field">
+            <label for="Description">Mô tả</label>
+            <input
+              id="Description"
+              pInputText
+              type="text"
+              [(ngModel)]="subject.code"
+              required
+            />
+          </div>
+        </ng-template>
+        <ng-template pTemplate="footer">
+          <button
+            pButton
+            pRipple
+            label="Hủy"
+            icon="pi pi-times"
+            class="p-button-text"
+            (click)="displayDialog = false"
+          ></button>
+          <button
+            pButton
+            pRipple
+            label="Lưu"
+            icon="pi pi-check"
+            class="p-button-text"
+            (click)="save()"
+          ></button>
+        </ng-template>
+      </p-dialog>
     </div>
   </div>
+</div>
